src/main/java/org/example/breakoutdrop/Errors/ServerHTTP/ServerError500.java
package org.example.breakoutdrop.Errors.Server;

public class ServerError500 extends RuntimeException {
    public ServerError500(String message) {
        super(message);
    }
}
